[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
version = "1.0.0"
authors = [{ name = "Michael Bentz", email = "mbentz@ufl.edu" }]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
package_name = "package_name.__main__:main"

[project.urls]
"Homepage" = "https://github.com/ctsit/package_name"
"Bug Tracker" = "https://github.com/ctsit/package_name/issues"